# neuraltag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  blog.md  docker-compose.yml  loan_analyzer_app.py  prompt.txt  pyproject.toml  requirements.txt  update_weight_training_names.py
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: build-push-docker-image.yml  deploy-example.yml  deploy.yml  docker-image.yml  manual-push.yml  pr-tests.yml  strava_activity_update.yml
cicd/deploy/: deploy.sh  deployment_notes.md  modify_pyproject_toml.py  requirements.txt  strava.service  subscribe.sh
cicd/deploy/nginx/: strava
cicd/rpi_deploy/: nginx.conf
docker/: Dockerfile
src/: app.py  data.py  flows.py  gemini.py  naming.py  strava.py  utils.py  welcome.html.j2  workflows.py
src/app/: config.py  main.py
src/app/apis/: auth.py  webhook.py
src/app/core/: config.py
src/app/db/: adapter.py  encryption.py  external_api_data_handler.py  models.py
src/app/pages/: home.py
src/app/routes/: authorization.py  login.py  webhook.py
src/app/schemas/: login_request.py  webhook_get_request.py  webhook_post_request.py
src/app/static/: style.css
src/application/: app.py  subscribe.sh
src/database/: adapter.py  models.py
src/db/: db.py  models.py
src/flows/: __init__.py
src/scripts/: explore_location_2.py  explore_streams.py
src/tasks/: constants.py  data.py  etl.py  external_api_data_handler.py  manual_onboard.py  manual_onboard_script.py  name_generation.py  post_event.py  publish_name.py  rename_activity.py  strava.py  telegram.py
src/tasks/etl/: base.py  (+6 more)
terraform/: main.tf  variables.tf
tests/: system_test_api_renaming.py  system_test_name_suggestion_etl.py  system_test_webhook.py  test_app.py  test_data.py  test_gemini.py  test_naming.py  test_strava.py
workout_builder/: DEPLOY_JAVA.md  Makefile  streamlit_app.py
workout_builder/examples/: example_workout_1.yml  example_workout_2.yml  example_workout_3.yml  example_workout_4.yml  generic_run_workout.yml  interval_conqueror.fit  interval_conqueror.yaml  interval_crusher.fit  interval_crusher.yaml  the_endurance_builder.fit  the_endurance_builder.yaml  the_rocket_builder.fit  the_rocket_builder.yaml  the_tempo_tune_up.fit  the_tempo_tune_up.yaml
workout_builder/java/: fetch_deps.sh  install_fit_sdk.sh  pom.xml
workout_builder/py/: analyze_headers.py  generate_schema.py  header_logger.py  llm.py  request_capture.py  streamlit_app.py  workout_definition.py
workout_builder/schemas/: workout_definition_schema.json
workout_builder/scripts/: generate.ipynb  the_endurance_builderfit.fit
workout_builder/valid_examples/: Articulate_Your_Spine_workout.fit  Back-to-Basics_Workout_workout.fit  Back_to_Basics_workout.fit  COHRNCE.FIT  Generic_run_workout_workout.csv  L_run_-_Structured_Workout_8_workout.csv  Sun_Salutations_workout.fit  Tabata_Abs__Planks_&_Sit-ups_workout.fit
(+47 files in other folders)
