[project]
name = "strava"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dill>=0.3.9",
    "fastapi[standard]>=0.115.8",
    "folium>=0.19.4",
    "google-genai>=1.2.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polyline>=2.0.2",
    "pushbullet-py>=0.12.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.38",
    "stravalib>=2.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
