[project]
name = "strava"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.1",
    "cryptography>=44.0.2",
    "devtools>=0.12.2",
    "dill>=0.3.9",
    "fastapi-throttle>=0.1.4",
    "fastapi[standard]>=0.115.8",
    "folium>=0.19.4",
    "google-genai>=1.2.0",
    "jinja2>=3.1.6",
    "logfire[fastapi]>=3.12.0",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polyline>=2.0.2",
    "psycopg2-binary==2.9.9",
    "pushbullet-py>=0.12.0",
    "pydantic-ai>=0.0.51",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.38",
    "stravalib==2.3.0",
    "toml>=0.10.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "nbformat>=5.10.4",
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "streamlit>=1.43.2",
    "watchdog>=6.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
